fix: wrap/truncate post title and description

--- a/static/index.css
+++ b/static/index.css
@@ -111,6 +111,10 @@ footer {
     background-color: var(--card);
     max-width: calc(min(100%, 25rem));
 
+    white-space: normal;
+    text-overflow: clip;
+    word-break: break-word;
+
     .post-image {
         width: 100%;
         aspect-ratio: 1;
@@ -158,6 +162,11 @@ footer {
     margin-top: 3rem;
     max-width: 25rem;
     background-color: var(--card);
+
+    white-space: normal;
+    overflow: visible;
+    text-overflow: clip;
+    word-break: break-word;
 
     .like-count {
         font-size: 1.25rem;
@@ -219,6 +228,11 @@ footer {
     background-color: var(--card);
     border: var(--border);
     border-radius: var(--radius-md);
+
+    white-space: normal;
+    overflow: visible;
+    text-overflow: clip;
+    word-break: break-word;
 }
 
 .comments-list li {
